# sentitube

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml
api/: main.ipynb  main.py  pyproject.toml
api/formatters/: dict_keys_to_snake_case.py
api/models/: comment.py  youtube_comment.py  youtube_comments_response.py  youtube_video.py  youtube_video_response.py
api/repositories/: youtube_repository.py
api/services/: sentiment_analyzer_service.py  youtube_service.py
front/: README.md  dockerfile.front  package.json  tsconfig.json
front/app/: globals.css  layout.tsx  page.tsx
front/app/metrics/: page.tsx
front/app/results/: page.tsx
server/: .dockignore  dockerfile.api  dockerfile.worker  pyproject.toml
server/src/: api.py  worker.py
server/src/formatters/__tests__/: test_dict_keys_to_snake_case.py
server/src/models/: analyze.py  youtube_comments_response.py
server/src/models/requests/: post_yt_video_analyze.py
server/src/repositories/: analyze_repository.py  youtube_repository.py
server/src/services/: database_service.py  sentiment_analyzer_service.py
server/src/tasks/: add.py  analyze_comments.py
worker/: dockerfile  pyproject.toml
worker/src/: sentiment-analyzer-worker.py
